some very basic posts list implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="fashion">Fashion</string>
     <string name="accessories">Accessories</string>
     <string name="places">Places</string>
+    <string name="retry">Retry</string>
 </resources>
