book service functionality implementation started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="home_sub_header_message"><![CDATA[Discover & connect with great service providers near you.]]></string>
     <string name="write_a_review">Write a Review</string>
     <string name="photo_gallery">Photo Gallery</string>
+    <string name="book_now">Book Now</string>
 </resources>
