--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,16 @@
     <string name="username_hint">Username or email address</string>
     <string name="password_hint">Password</string>
     <string name="login_title">Welcome Back!</string>
+    <string name="first_name_hint">First Name</string>
+    <string name="last_name_hint">Last Name</string>
+    <string name="register_login_hint">Login Username</string>
+    <string name="email_hint">Email</string>
+    <string name="confirm_email_hint">Confirm Email</string>
+    <string name="vendor_hint">Vendor Name</string>
+    <string name="vendor_warning">Important: This is the name that customers see when purchasing your products. Please choose carefully.</string>
+    <string name="vendor_description_edit_title">Please describe something about your company and what you sell.</string>
+    <string name="register_title">Vendor Registration Form</string>
+    <string name="register_sub_title">Submit the form below to become a vendor on this store.</string>
+    <string name="business_registration">Business Registration</string>
+    <string name="register">Register</string>
 </resources>
