--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="friday">Friday</string>
     <string name="cover_image">Select Cover Image (optional)</string>
     <string name="closed">Closed</string>
+    <string name="image_pick_failed">Unable to select image</string>
 </resources>
